# 2026CapstoneDesign_08_01

./: .gitattributes  .gitignore  MWS.uproject  README.md  UE5_files  test_f.sln
Config/: DefaultEngine.ini  DefaultGame.ini
Content/01Blueprints/: EBPL_PythonExecutor.uasset  F_KeyFrame.uasset  MI_Weathering.uasset  M_Weathering.uasset  NewBlueprint.uasset  NewEditorUtilityBlueprint.uasset  NewEditorUtilityBlueprint1.uasset  NewEditorUtilityWidgetBlueprint.uasset  TestOnlyComponent.uasset  WeatheringManagerComponent.uasset
Content/02Level/: DefaultMap.umap  DefaultMap_HLOD0_Instancing.uasset
Content/03Python/: ManifoldModuleTest.ipynb  temp.py  temp2.py  (+2 more)
Content/03Python/AppearanceManifold/: CMakeLists.txt  CMakeTuto.txt  Dome_Eval.json  Geodesic.py  Geodesic_Backend.cpp  KNN.py  LoggerClass.py  MDS.py  MDSEvaluator.py  ManifoldSampleTest copy.ipynb  ManifoldSampleTest.ipynb  Military_Trenches_Wall_Metal_Corrugated_03_yd0jdits_Mid_2K_Roughness.uasset  Military_Trenches_Wall_Metal_Corrugated_03_yd0jdits_Mid_2K_Specular.uasset  Reconstructor.py  Spiral_Eval.json  Test_Image.ipynb  Test_Wave.ipynb  Texture_Eval.json  Trajectory.py  Unreal_pytest.py  Utility.py  Wave_Eval.json  geodesic_backend.cpp  test.py  weathering_base_basecolor.uasset  weathering_base_roughness.uasset  weathering_base_specular.uasset  weathering_mid_basecolor.uasset  weathering_mid_roughness.uasset  weathering_mid_specular.uasset
Content/03Python/AppearanceManifold/Backend/tasks/: texture_task.py
Content/03Python/AppearanceManifold/Legacy/: DownSampler.py  Geodesic.py  Geodesic_Improved.py  MDS.py  SampleCombiner.py  SampleMaker.py  WeatheringScore.py  manifold_test_next.ipynb  test_unreal_python.py
Content/03Python/AppearanceManifold/Legacy/Backend/: app.py  rq_worker.py
Content/03Python/AppearanceManifold/Legacy/Backend/tasks/: texture_task.py
Content/03Python/AppearanceManifold/Legacy/isomap_master/: 2026.04.29. simple_example.ipynb  isomap.py
Content/03Python/AppearanceManifold/LoggerModules/: GeodesicEvaluator.py  KNNEvaluator.py  TrajectoryEvaluator.py
Content/03Python/AppearanceManifold/Modules/: KNN.py  MDS.py  _Reconstructor.py
Content/03Python/AppearanceManifold/TestData/: Texture_Eval_0520.json
Source/: MWS.Target.cs  MWSEditor.Target.cs
(+160 files in other folders)
